--- a/android/chatinput/src/main/res/layout/view_chatinput.xml
+++ b/android/chatinput/src/main/res/layout/view_chatinput.xml
@@ -34,6 +34,7 @@
                 android:layout_gravity="center"
                 android:background="@android:color/transparent"
                 android:clickable="false"
+                android:visibility="gone" 
                 android:scaleType="fitCenter"
                 android:src="@drawable/nim_message_button_bottom_audio_selector" />
         </FrameLayout>
@@ -86,6 +87,7 @@
                 android:layout_gravity="center"
                 android:background="@android:color/transparent"
                 android:clickable="false"
+                android:visibility="gone" 
                 android:scaleType="fitCenter"
                 android:src="@drawable/nim_message_button_bottom_emoji_selector" />
         </FrameLayout>
